fix bug: double border

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -837,6 +837,10 @@ body :not( :checked ) > .toctogglespan:after {
 	background: @base90;
 	border-width: 1.125px;
 
+	> tbody {
+		border: none;
+	}
+
 	> tr > th,
 	> tr > td,
 	> * > tr > th,
